# HasteHealth

./: Claude.md  README.md  docker-compose.yml  docker-services-compose.yml
backend/: .env.development  Cargo.toml  release-plz.toml
backend/.sqlx/: query-0ebb52cb0f476240e766afc435ea509142aa6a2a018fc82ef512b7070fbd2496.json  query-1c1a44e4053681f6496ce31e268836d91f8b94306f770903839e39698029b8c7.json  query-2c3a03a1e10595f07cadab2646b09a880d3d901a63b4ff6239516e091c0a5dd9.json  query-4471dad429bb961ac4ca472174390955f9def814c23020c9012d9ef5cd7a9ed0.json  query-4499ca75adbe3a9b933faaa8484dcdc399e32eb9a736b1139f3e89e1c23259eb.json  query-486b44e3494a82b9c92392594ffb2a5728bb5bd6f678ff3fddb5927a1e4436f4.json  query-4c1351179dfb13818b7e5b1849b7c8f1bcf55081a4d9d74eae2cefeb27eb8dd5.json  query-5872506832a7de6577f55c0c666195e92556c8ee6f5ce91c465566ba2ee76512.json  query-600f73a7eb9dde3fd31d687d76419968205bcbac23a72d971c93380ef2dd85f3.json  query-6ad0ff804cce7cf297eb4a030bb22ea7dabeb58e64175739307ac8060300a433.json  query-6d0190946365c6599351afc7d99d535c6cf6b0f8e284fac5ea154dc6c80d2157.json  query-77bd2e3a46384de0bca0df85d94dfb264950bfb8bcb3f51bd79099a4abbe1a66.json  query-7b2539c4134584a5a42ef846ecbe55bd7fccfd703a214c734f0c423d868b8927.json  query-92f19bf665be95d5ababb3037f7ab2130dea31baa58d350b4c2b75830506a407.json  query-a2efa65c814b84afaffe83660abbc956deaec2a73184f2ddf20fe6a38156afe6.json  query-a5758345ee998568e83806dd5c083a6e17867a3b06fb9e43cb742298ef77c011.json  query-a65b753b273f16850666a4ec6bfceef87e285e6de5e43cf3d679692976e2bd3d.json  query-b25feb0ec32a8eb2d4eabe9bdd051406a09c9b4e177b653da28a776ef07e3dba.json  query-b63166f87c43a5d2e014f3c7666e31c4788a388ffddf521fc94c4f529750276f.json  query-b72cbca0c3be421612359cb3192672d54f9667263ec9d37509a7b39662b80ff2.json  query-b9fbadee341b74286438a40cb25faa5f863616bbb80e38d392f22ea37622cced.json  query-bdf828b573c08e5cb767e406d18d8255f1057979e7b6b388d5ca4b1a81d61506.json  query-c6930ac3cc2e2eaf233b84a4b667e407204eabcd58d594dc73f099f723d0bcf9.json  query-c7481699d26ab9d402628e265a53fbc4d35c09a5444ac04cf78aa2ba03c2c637.json  query-e99565913b529b6b3c007103b866587a454546a4a29b666206dd0c5397b5e918.json  query-f6924384cd2321e5681d8c03c196a8a4320dcf74e745c5d37bf7d674faf94eea.json
backend/crates/access-control/: Cargo.toml
backend/crates/access-control/src/: context.rs  lib.rs  request_reflection.rs  utilities.rs
backend/crates/artifacts/: Cargo.toml
backend/crates/artifacts/src/: lib.rs  search_parameters.rs
backend/crates/codegen/: Cargo.toml
backend/crates/codegen/src/: lib.rs  traversal.rs  utilities.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: environment.rs  lib.rs
backend/crates/deno_executor/: Cargo.toml  Readme.md  build.rs  example.ts
backend/crates/deno_executor/src/: lib.rs  main.rs  pool.rs  runtime.js
backend/crates/fhir-client/: Cargo.toml
backend/crates/fhir-client/src/: axum.rs  canonical_resolver.rs  http.rs  lib.rs  request.rs  url.rs
backend/crates/fhir-generated-ops/src/: generated.rs
backend/crates/fhir-model/: Cargo.toml
backend/crates/fhir-model/benches/: serialization_bench.rs
backend/crates/fhir-model/src/: lib.rs
backend/crates/fhir-operation-error/: Cargo.toml
backend/crates/fhir-operation-error-derive/: Cargo.toml
backend/crates/fhir-operation-error/src/: axum.rs
backend/crates/fhir-ops/: Cargo.toml
backend/crates/fhir-ops-derive/: Cargo.toml
backend/crates/fhir-profiling/: Cargo.toml
backend/crates/fhir-profiling/src/: element.rs  lib.rs  utilities.rs
backend/crates/fhir-search/: Cargo.toml
backend/crates/fhir-search/src/: indexing_conversion.rs  lib.rs
backend/crates/fhir-serialization-json/: Cargo.toml
backend/crates/fhir-serialization-json-derive/: Cargo.toml
backend/crates/fhir-serialization-json-derive/src/: deserialize.rs  lib.rs
backend/crates/fhir-serialization-json/src/: deserialize_primitives.rs  lib.rs  serialize_primitives.rs  traits.rs
backend/crates/fhir-subscription-processor/: Cargo.toml  Readme.md
backend/crates/fhir-subscription-processor/src/: lib.rs  traits.rs
backend/crates/fhir-terminology/: Cargo.toml
backend/crates/fhir-terminology/src/: client.rs  lib.rs
backend/crates/fhirpath/: Cargo.toml
backend/crates/fhirpath/benches/: fp_performance.rs
backend/crates/fhirpath/src/: error.rs  lib.rs
backend/crates/hl7v2/: Cargo.toml
backend/crates/indexing-worker/: Cargo.toml
backend/crates/indexing-worker/src/: lib.rs
backend/crates/jwt/: Cargo.toml
backend/crates/jwt/src/: claims.rs  lib.rs  reflect.rs
backend/crates/macro-loads/: Cargo.toml
backend/crates/openapi-schema-generator/: Cargo.toml
backend/crates/openapi-schema-generator/src/: lib.rs
backend/crates/pointer/: Cargo.toml
backend/crates/pointer/src/: escape.rs  lib.rs
backend/crates/rate-limit/: Cargo.toml
backend/crates/reflect-derive/: Cargo.toml
backend/crates/repository/: Cargo.toml  build.rs
backend/crates/sd-to-json-schema/: Cargo.toml
backend/crates/server/: Cargo.toml
backend/crates/server/src/: lib.rs  (+6 more)
backend/crates/testscript-runner/: Cargo.toml
backend/crates/wal_worker/: Cargo.toml  Readme.md
backend/crates/worker/: Cargo.toml
backend/crates/x-fhir-query/: Cargo.toml
backend/scripts/: testscript_build.sh
backend/src/: client.rs  main.rs
backend/src/commands/: admin.rs  api.rs  codegen.rs  config.rs  fhirpath.rs  mod.rs  server.rs  testscript.rs  worker.rs
backend/testscripts/: bundle-fullurl.testscript.json  read.testscript.json  transaction.testscript.json  vread.testscript.json
backend/testscripts/crud/: history.testscript.json  update-client-supplied-id.testscript.json
backend/testscripts/operations/: expand.testscript.json  validate-code.testscript.json
backend/testscripts/profiling/: us-core-patient.json
backend/testscripts/search/: date_le_ge.testscript.json  date_lt_gt.testscript.json  le_ge.testscript.json  lt_gt.testscript.json  missing_modifier.testscript.json  number_le_ge.testscript.json  number_ne_prefix.testscript.json  string_contains_modifier.json  string_exact_modifier.json
(+479 files in other folders)
