[package]
name = "haste-health"
version = "0.1.0"
edition = "2024"
description = "Haste Health binary."
publish = false
license = "GPL-3.0"

[profile.profiling]
inherits = "release"
debug = true

# [profile.release]
# strip = true    # Automatically strip symbols from the binary.
# opt-level = "z" # Optimize for size in release builds.

[workspace]
resolver = "3"
members = [
    "crates/access-control",
    "crates/artifacts",
    "crates/codegen",
    "crates/config",
    "crates/fhir-client",
    "crates/fhir-generated-ops",
    "crates/fhir-model",
    "crates/fhir-operation-error",
    "crates/fhir-operation-error-derive",
    "crates/fhir-ops",
    "crates/fhir-ops-derive",
    "crates/fhir-search",
    "crates/fhir-serialization-json",
    "crates/fhir-serialization-json-derive",
    "crates/fhir-terminology",
    "crates/fhirpath",
    "crates/hl7v2",
    "crates/indexing-worker",
    "crates/jwt",
    "crates/macro-loads",
    "crates/openapi-schema-generator",
    "crates/pointer",
    "crates/rate-limit",
    "crates/reflect",
    "crates/reflect-derive",
    "crates/repository",
    "crates/sd-to-json-schema",
    "crates/server",
    "crates/testscript-runner",
    "crates/x-fhir-query",
]

[workspace.package]
version = "0.10.7"
authors = ["Haste Health"]
license = "BSD-3-Clause"
homepage = "https://haste.health"
edition = "2024"


[workspace.dependencies]
tokio = { version = "1.49.0" }
tracing = "0.1.41"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = "0.8"
sqlx-postgres = "0.8.6"
dotenvy = "0.15.7"
regex = "1.12.2"
jsonwebtoken = "10.2.0"
axum = "0.8.4"
chrono = "0.4.41"
reqwest = "0.13"
walkdir = "2.5.0"
quote = "1.0.40"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
tokio = { workspace = true, features = ["full"] }
walkdir = { workspace = true }
quote = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
dialoguer = "0.12.0"
haste-codegen = { path = "./crates/codegen" }
haste-config = { path = "./crates/config" }
haste-fhir-client = { path = "./crates/fhir-client", features = ["http"] }
haste-fhir-model = { path = "./crates/fhir-model" }
haste-fhir-operation-error = { path = "./crates/fhir-operation-error" }
haste-fhir-search = { path = "./crates/fhir-search" }
haste-fhir-serialization-json = { path = "./crates/fhir-serialization-json" }
haste-fhirpath = { path = "./crates/fhirpath" }
haste-indexing-worker = { path = "./crates/indexing-worker" }
haste-jwt = { path = "./crates/jwt" }
haste-repository = { path = "./crates/repository" }
haste-server = { path = "./crates/server" }
haste-testscript-runner = { path = "./crates/testscript-runner" }
tracing-subscriber = "0.3.20"
toml = "0.9.8"
json-patch = "4.1.0"
