[package]
name = "haste-health"
version = "0.2.0"
edition = "2024"
description = "Haste Health binary."
publish = false
license = "GPL-3.0"

# [profile.release]
# strip = true    # Automatically strip symbols from the binary.
# opt-level = "z" # Optimize for size in release builds.

[workspace]
resolver = "3"
members = [
    "crates/access-control",
    "crates/artifacts",
    "crates/codegen",
    "crates/config",
    "crates/deno_executor",
    "crates/fhir-client",
    "crates/fhir-generated-ops",
    "crates/fhir-model",
    "crates/fhir-operation-error",
    "crates/fhir-operation-error-derive",
    "crates/fhir-ops",
    "crates/fhir-ops-derive",
    "crates/fhir-profiling",
    "crates/fhir-search",
    "crates/fhir-serialization-json",
    "crates/fhir-serialization-json-derive",
    "crates/fhir-subscription-processor",
    "crates/fhir-terminology",
    "crates/fhirpath",
    "crates/hl7v2",
    "crates/jwt",
    "crates/macro-loads",
    "crates/openapi-schema-generator",
    "crates/pointer",
    "crates/rate-limit",
    "crates/reflect",
    "crates/reflect-derive",
    "crates/repository",
    "crates/sd-to-json-schema",
    "crates/server",
    "crates/testscript-runner",
    "crates/wal_worker",
    "crates/worker",
    "crates/x-fhir-query",
]

[workspace.package]
version = "0.15.0"
authors = ["Haste Health"]
license = "BSD-3-Clause"
homepage = "https://haste.health"
edition = "2024"

[workspace.dependencies]
axum = "0.8.9"
chrono = "0.4.44"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
moka = "0.12.15"
quote = "1.0.45"
regex = "1.12.3"
reqwest = "0.13"
sentry = "0.46.2"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.8"
sqlx-postgres = "0.8.6"
tokio = { version = "1.52.1" }
tracing = "0.1.44"
walkdir = "2.5.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
haste-codegen = { path = "./crates/codegen" }
haste-config = { path = "./crates/config" }
haste-fhir-client = { path = "./crates/fhir-client", features = ["http"] }
haste-fhir-model = { path = "./crates/fhir-model" }
haste-fhir-operation-error = { path = "./crates/fhir-operation-error" }
haste-fhir-search = { path = "./crates/fhir-search" }
haste-fhir-serialization-json = { path = "./crates/fhir-serialization-json" }
haste-fhirpath = { path = "./crates/fhirpath" }
haste-jwt = { path = "./crates/jwt" }
haste-repository = { path = "./crates/repository" }
haste-server = { path = "./crates/server" }
haste-testscript-runner = { path = "./crates/testscript-runner" }
haste-worker = { path = "./crates/worker" }
haste_wal_worker = { path = "./crates/wal_worker" }
json-patch = "4.2.0"
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
quote = { workspace = true }
reqwest = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = "0.9.12"
tracing = { workspace = true }
tracing-subscriber = "0.3.23"
walkdir = { workspace = true }

[profile.profiling]
inherits = "release"
debug = true
