[package]
name = "haste-access-control"
description = "Access control utilities for Haste Health FHIR server and clients."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*", features = ["reflect"] }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
haste-pointer = { path = "../pointer", version = "0.*" }
haste-x-fhir-query = { path = "../x-fhir-query", version = "0.*" }
