[package]
name = "haste-artifacts"
publish = false
description = "FHIR artifacts for Haste Health."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
rust-embed = { version = "8.9.0", features = [
    "compression",
    "include-exclude",
] }
