[package]
name = "haste-config"
version = { workspace = true }
edition = { workspace = true }
description = "Configuration utilities for Haste Health FHIR server and clients."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
dotenvy = { workspace = true }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
tracing = { workspace = true }
