[package]
name = "haste_deno_executor"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
deno_ast = {version = "0.53.1", features = ["transpiling"]}
deno_core = "0.400.0"
deno_error = "0.7.1"
tokio = { workspace = true, features = ["full"] }
