[package]
name = "haste-fhir-client"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIR client implementation."
license = { workspace = true }
homepage = { workspace = true }

[features]
axum = ["dep:axum"]
http = ["dep:reqwest"]

[dependencies]
axum = { version = "0.8.4", optional = true }
http = "1.3.1"
json-patch = "4.0.0"
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
reqwest = { version = "0.12", optional = true }
thiserror = "2.0.12"
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros"] }
