[package]
name = "haste-fhir-client"
description = "Haste Health FHIR client implementation."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[features]
axum = ["dep:axum"]
http = ["dep:reqwest"]

[dependencies]
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
http = "1.3.1"
json-patch = "4.0.0"
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
thiserror = "2.0.12"
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
serde_json = { workspace = true }
dashmap = "6.1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
