[package]
name = "haste-fhir-client"
description = "Haste Health FHIR client implementation."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[features]
axum = ["dep:axum"]
http = ["dep:reqwest"]

[dependencies]
axum = { workspace = true, optional = true }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
http = "1.4.0"
json-patch = "4.2.0"
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
