[package]
name = "haste-fhir-model"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR data model for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[features]
sqlx = ["dep:sqlx"]

[dependencies]
chrono = "0.4.41"
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*", features = [
    "derive",
] }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", optional = true, features = ["postgres"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "serialization_bench"
harness = false
