[package]
name = "haste-fhir-model"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR data model for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[features]
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*", features = [
    "derive",
] }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true, features = ["postgres"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "serialization_bench"
harness = false
