[package]
name = "haste-fhir-operation-error"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIR operation error handling."
license = { workspace = true }
homepage = { workspace = true }

[features]
derive = ["dep:haste-fhir-operation-error-derive"]
axum = ["dep:axum", "dep:haste-fhir-serialization-json"]

[dependencies]
anyhow = "1.0.98"
axum = { workspace = true, optional = true }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error-derive = { path = "../fhir-operation-error-derive", version = "0.*", optional = true }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*", optional = true }
tracing = { workspace = true }
