[package]
name = "haste-fhir-profiling"
description = "Haste Health FHIR profiling library."
publish = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
haste-codegen = { path = "../codegen", version = "0.*" }
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-pointer = { path = "../pointer", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
