[package]
name = "haste-fhir-search"
publish = false
description = "Haste Health FHIR search library."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
chrono = "0.4.41"
elasticsearch = "9.0.0-alpha.1"
haste-artifacts = { path = "../artifacts", version = "0.*" }
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
haste-repository = { path = "../repository", version = "0.*" }
# rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
