[package]
name = "haste-fhir-search"
publish = false
description = "Haste Health FHIR search library."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
chrono = { workspace = true }
elasticsearch = "9.0.0-alpha.1"
haste-artifacts = { path = "../artifacts", version = "0.*" }
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
haste-repository = { path = "../repository", version = "0.*" }
moka = { workspace = true, features = ["future"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
