[package]
name = "haste-fhir-serialization-json-derive"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR JSON serialization derive macros for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = { workspace = true }
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
