[package]
name = "haste-fhir-serialization-json"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR JSON serialization utilities for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[features]
derive = ["dep:haste-fhir-serialization-json-derive"]

[dependencies]
haste-fhir-serialization-json-derive = { path = "../fhir-serialization-json-derive", version = "0.*", optional = true }
serde_json = { workspace = true }
thiserror = "2.0.18"
