[package]
name = "fhir-subscription-processor"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-artifacts = { path = "../artifacts", version = "0.*" }
