[package]
name = "fhir_subscription_processor"
publish = false
description = "Haste Health FHIR subscription processor."
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
haste-artifacts = { path = "../artifacts", version = "0.*" }
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-search = { path = "../fhir-search", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
