[package]
name = "haste-fhir-terminology"
publish = true
description = "Haste Health FHIR terminology services library."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
chrono = { workspace = true }
dashmap = "6.1.0"
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-generated-ops = { path = "../fhir-generated-ops", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-jwt = { path = "../jwt", version = "0.*" }

