[package]
name = "haste-fhirpath"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIRPath evaluation library."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
dashmap = "6.1.0"
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
haste-reflect-derive = { path = "../reflect-derive", version = "0.*" }
peg = "0.8.5"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
insta = "1.43.1"
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[[bench]]
name = "fp_performance"
harness = false
