[package]
name = "haste-indexing-worker"
publish = false
description = "Haste Health FHIR indexing worker."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
elasticsearch = "9.0.0-alpha.1"
haste-config = { path = "../config", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-search = { path = "../fhir-search", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-repository = { path = "../repository", version = "0.*" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
sqlx-postgres = "0.8.6"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"
