[package]
name = "haste-indexing-worker"
publish = false
description = "Haste Health FHIR indexing worker."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
elasticsearch = "9.0.0-alpha.1"
haste-config = { path = "../config", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-search = { path = "../fhir-search", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-repository = { path = "../repository", version = "0.*" }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
