[package]
name = "haste-jwt"
version = { workspace = true }
edition = { workspace = true }
description = "JWT utilities and claims for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[features]
sqlx = ["dep:sqlx"]
reflect = ["dep:haste-reflect"]

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*", optional = true }
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
