[package]
name = "haste-macro-loads"
version = { workspace = true }
edition = { workspace = true }
description = "Macro loads for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = "2.0.117"
walkdir = { workspace = true }
