[package]
name = "haste-openapi-schema-generator"
description = "Generate OpenAPI schemas from FHIR StructureDefinitions and Search Parameters."
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-sd-to-json-schema = { path = "../sd-to-json-schema", version = "0.*" }
serde = { workspace = true }
serde_json = { workspace = true }
