[package]
name = "haste-reflect-derive"
version = { workspace = true }
edition = { workspace = true }
description = "Reflection derive macros for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = "2.0.104"
