[package]
name = "haste-repository"
version = { workspace = true }
edition = { workspace = true }
description = "Repository/storage for Haste Health resources."
license = { workspace = true }
homepage = { workspace = true }

[features]
rate-limit = []

[dependencies]
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-rate-limit = { path = "../rate-limit", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*", features = ["sqlx"] }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
moka = { version = "0.12.11", features = ["future"] }
nanoid = "0.4.0"
regex = "1.12.2"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
sqlx-postgres = "0.8.6"
tokio = { version = "1.49.0", features = ["sync"] }
tracing = "0.1.41"
