[package]
name = "haste-sd-to-json-schema"
description = "Convert FHIR StructureDefinitions to JSON Schema."
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-codegen = { path = "../codegen", version = "0.*" }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
